[metadata]
name = stemmer
summary = Obtain stem from inflected word
description-file =
  README.rst
author = Balasankar C
author-email = balasankarc@autistici.org
home-page = 
classifier =
  #Environment :: Web Environment
  #Framework :: Flask
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 3

[files]
packages = stemmer

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1
